Fixed responsiveness on pictures to not become bsstretched and fixed types

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -71,3 +71,17 @@
   font-size: 1.25rem;
   padding: 10px 20px;
 }
+
+.peoplePictures {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  aspect-ratio: 1 / 2;
+}
+
+.filmPictures {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  aspect-ratio: 1 / 2;
+}
